--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# shapeshifting-internet-virus
+--------------------------------
+| shapeshifting-internet-virus |
+--------------------------------
 
 'updates'
 
